syntax = "proto3";
package fx.grpc;
import "timestamp.proto";
//import "symbol.proto";

enum MessageType {
    MAINTENANCE_COMMAND = 0;
    ACCOUNT_INFO = 1;
    //TRADE_COMMAND = 3;
    //TRADE_INFO = 2;
}

message GeneralRequest {
    MessageType type = 1;
    MaintenanceRequest maintenanceRequest = 2;
    AccountInfoRequest accountInfoRequest = 3;
    //CommandRequest command = 3;
}

message GeneralResponse {
    MessageType type = 1;
    MaintenanceResponse maintenanceResponse = 2;
    AccountInfoResponse accountInfoResponse = 3;
    //CommandResponse command = 3;
}

message MaintenanceRequest {
    enum Code {
        OPEN_SESSION = 0;
        CLOSE_SESSION = 1;
    }
    Code code = 1;
}

message MaintenanceResponse {
    enum Code {
        DONE = 0;
        FAILURE = 1;
    }
    Code code = 1;
    google.protobuf.Timestamp datetime = 3;
}

 enum AccountInfoCode {
    INTEGER_ACCOUNT_PROPERTIES = 0;
    DOUBLE_ACCOUNT_PROPERTIES = 1;
    STRING_ACCOUNT_PROPERTIES = 2;
    MAX_VOLUMES = 3;
    }

message AccountInfoRequest {
    AccountInfoCode code = 1;
    int32 ticket = 2;
}

message AccountInfoResponse {
    AccountInfoCode code = 1;
    int32 ticket = 2;
    string details = 3;
}

service ExecutiveProvider  {
    rpc CommunicateAsync(stream GeneralRequest) returns (stream GeneralResponse);
}

service ExecutiveSupplier  {
    rpc CommunicateAsync(stream GeneralRequest) returns (stream GeneralResponse);
}






//message CommandRequest {
//     enum Code {
//        ORDER_OPEN = 0;
//        ORDER_CLOSE = 1;
//        // any other actions...
//    }

    //ORDER DETAILS HERE

//    int32 ticket = 1;
//    string details = 2;
//}

//message CommandResponse {
//     enum Code {
//        ORDER_OPEN = 0;
//        ORDER_CLOSE = 1;
        // any other actions...
//    }

    //ORDER DETAILS HERE

//    int32 ticket = 1;
//    string details = 2;
//}